feat: update tools

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -5,5 +5,6 @@ $onSecondary: #fff;
 $background: #f7f8fa;
 $onBackground: #171e29;
 $lightText: #a6a6a6;
+$lightGreen: #5f9f47;
 
 $shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
